# FileManager

./: CMakeLists.txt  main
include/: DirectoryOps.h  FileOps.h  Types.h  Utils.h
src/: DirectoryOps.c  FileOps.cpp  Utils.c  main.c
